fixed baskets section and created button style

--- a/source/index.html
+++ b/source/index.html
@@ -95,12 +95,16 @@
           </tr>
         </table>
         <div class="baskets__to-order">
-          <img class="baskets__image" src="https://via.placeholder.com/150x150" width="260" height="315" alt="Вязаные корзинки">
+          <img class="baskets__image" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Вязаные корзинки">
           <p class="baskets__prise">Цена: 990 руб.</p>
-          <button class="baskets__order-btn button" type="button">Заказать</button>
+          <button class="baskets__to-order-btn button" type="button">Заказать</button>
         </div>
       </div>
     </section>
+
+    <div class="zig-zag__block">
+      <img class="zig-zag__image" src="" alt="Зиг-заг картинка">
+    </div>
 
 <!-- Секция о нас -->
     <section class="about-us">
