fixed images and created about-us section

--- a/source/index.html
+++ b/source/index.html
@@ -158,6 +158,10 @@
       </div>
     </section>
 
+    <div class="zig-zag__block">
+      <img class="zig-zag__image" src="" alt="Зиг-заг картинка">
+    </div>
+
 <!-- Секция контактов -->
     <section class="contacts">
       <div class="contacts__inner">
@@ -180,7 +184,9 @@
       <div class="contacts__map">
         <img class="contacts__image" src="https://via.placeholder.com/150x150" width="320" height="457" alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
       </div>
-      <button class="contacts__btn button">Напишите нам</button>
+      <div class="contacts__inner">
+        <button class="contacts__btn button">Напишите нам</button>
+      </div>
     </section>
 
   </main>
