--- a/source/index.html
+++ b/source/index.html
@@ -168,21 +168,22 @@
         <h2 class="contacts__title title">Контакты</h2>
         <table class="contacts__desc">
           <tr class="contacts__email">
-            <td>e-mail:</td>
-            <td>info@mimimishkashop.ru</td>
+            <td class="contacts__value">e-mail:</td>
+            <td class="contacts__field">info@mimimishkashop.ru</td>
           </tr>
           <tr class="contacts__address">
-            <td>адрес:</td>
-            <td>
-              г. Санкт-Петербург,
-              ул. Большая Конюшенная,
+            <td class="contacts__value">адрес:</td>
+            <td class="contacts__field">
+              г. Санкт-Петербург,<br>
+              ул. Большая Конюшенная,<br>
               д. 19/8, офис 101
             </td>
           </tr>
         </table>
       </div>
       <div class="contacts__map">
-        <img class="contacts__image" src="https://via.placeholder.com/150x150" width="320" height="457" alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
+        <img class="contacts__image" src="img/map-mobile@1x.jpg" width="320" height="457" alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
+        <img class="contacts__pin" src="https://via.placeholder.com/150x150" alt="" width="100" height="67">
       </div>
       <div class="contacts__inner">
         <button class="contacts__btn button">Напишите нам</button>
@@ -209,7 +210,7 @@
       </div>
       <div class="footer__copyright copyright">
         <b class="copyright__text">Разработано</b>
-        <a class="copyright__link button" href="https://htmlacademy.ru/intensive/adaptive">
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
           <img class="footer__image" src="https://via.placeholder.com/150x150" width="27" height="34" alt="HTML Academy">
         </a>
       </div>
