created modal section

--- a/source/index.html
+++ b/source/index.html
@@ -223,15 +223,17 @@
   <!-- Секция модального окна -->
   <section class="modal-add modal">
     <div class="modal__inner">
-      <p class="modal__title">Добавить в корзину</p>
+      <p class="modal__title">Добавить<br> в корзину</p>
       <fieldset>
         <legend class="modal__legend">Выберите размер:</legend>
-        <label for="size-s">S</label>
-        <label for="size-m">M</label>
-        <label for="size-l">L</label>
-        <input class="visually-hidden" id="size-s" type="radio" name="size">
-        <input class="visually-hidden" id="size-m" type="radio" name="size">
-        <input class="visually-hidden" id="size-l" type="radio" name="size">
+        <div class="modal__sizes">
+          <input class="visually-hidden" id="size-s" type="radio" name="size">
+          <input class="visually-hidden" id="size-m" type="radio" name="size">
+          <input class="visually-hidden" id="size-l" type="radio" name="size" checked>
+          <label class="modal__size" for="size-s">S</label>
+          <label class="modal__size" for="size-m">M</label>
+          <label class="modal__size" for="size-l">L</label>
+        </div>
       </fieldset>
       <button class="modal__btn button" type="button">Добавить</button>
     </div>
