fixed bugs and created catalog section

--- a/source/form.html
+++ b/source/form.html
@@ -20,12 +20,12 @@
         <img class="logo__image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет магазина Мишка">
       </a>
       <nav class="header__menu menu">
-        <button class="menu__btn" type="button" aria-label="Открыть меню для навигации на сайте">Открыть меню</button>
+        <button class="menu__btn" type="button" aria-label="Открыть меню для навигации на сайте">Меню</button>
         <ul class="menu__list">
           <li class="menu__item"><a class="menu__link" href="catalog.html">Каталог товаров</a></li>
           <li class="menu__item"><a class="menu__link">Вязание на заказ</a></li>
           <li class="menu__item">
-            <label><input type="search" placeholder="Поиск по сайту" aria-label="Поиск по сайту"></label>
+            <label><input class="menu__item-search" type="search" placeholder="Поиск по сайту" aria-label="Поиск по сайту"></label>
           </li>
           <li class="menu__item"><a class="menu__link" href="#">Корзина: пока пуста</a></li>
         </ul>
