--- a/source/index.html
+++ b/source/index.html
@@ -20,7 +20,7 @@
         <img class="logo__image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет магазина Мишка">
       </a>
       <nav class="header__menu menu">
-        <button class="menu__btn" type="button" aria-label="Открыть меню для навигации на сайте">Открыть меню</button>
+        <button class="menu__btn" type="button" aria-label="Открыть меню для навигации на сайте">Меню</button>
         <ul class="menu__list">
           <li class="menu__item"><a class="menu__link" href="catalog.html">Каталог товаров</a></li>
           <li class="menu__item"><a class="menu__link" href="form.html">Вязание на заказ</a></li>
@@ -151,8 +151,8 @@
           <address class="reviews__account">@misssssiskras</address>
         </div>
         <div class="reviews__btn">
-          <button class="reviews__btn-prev" type="button" aria-label="Предущий слайд">Предущий слайд</button>
-          <button class="reviews__btn-next" type="button" aria-label="Следующий слайд">Следующий слайд</button>
+          <button class="reviews__btn-prev" type="button" aria-label="Предущий слайд">Предыдущий</button>
+          <button class="reviews__btn-next" type="button" aria-label="Следующий слайд">Следующий</button>
         </div>
         <button type="button" class="reviews__write-btn button">Написать</button>
       </div>
