--- a/source/index.html
+++ b/source/index.html
@@ -224,7 +224,7 @@
   <section class="modal-add modal">
     <div class="modal__inner">
       <p class="modal__title">Добавить<br> в корзину</p>
-      <fieldset>
+      <fieldset class="modal__fieldset">
         <legend class="modal__legend">Выберите размер:</legend>
         <div class="modal__sizes">
           <input class="visually-hidden" id="size-s" type="radio" name="size">
