--- a/10/index.html
+++ b/10/index.html
@@ -49,13 +49,13 @@
         <a href="catalog.html" class="handwork__interior">
           <div class="handwork__inner">
             <p class="handwork__text">Предметы интерьера</p>
-            <img class="handwork__image-itn" src="img/icon-interior.svg" width="40" height="62" alt="Предметы интерьера">
+            <img class="handwork__image-itn" src="https://via.placeholder.com/150x150" width="40" height="62" alt="Предметы интерьера">
           </div>
         </a>
         <a href="catalog.html" class="handwork__toys">
           <div class="handwork__inner">
             <p class="handwork__text">Детские игрушки</p>
-            <img class="handwork__image-toys" src="img/icon-toy.svg" width="60" height="60" alt="Детские игрушки">
+            <img class="handwork__image-toys" src="https://via.placeholder.com/150x150" width="60" height="60" alt="Детские игрушки">
           </div>
         </a>
       </div>
