fixed form section

--- a/source/form.html
+++ b/source/form.html
@@ -82,7 +82,7 @@
             <legend class="form__legend form__legend-additionally">Доп</legend>
             <label><textarea name="form-text" id="form-text" cols="30" rows="10" placeholder="Опишите все ваши пожелания к заказу"></textarea></label>
           </fieldset>
-          <p class="form__require"><sup>*</sup>Поля обязательны для заполнения</p>
+          <small class="form__require"><sup>*</sup>Поля обязательны для заполнения</small>
           <button class="form__btn button" type="submit">Отправить заказ</button>
         </form>
       </div>
