fixed map and bugs in menu

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -24,9 +24,10 @@
         <ul class="menu__list">
           <li class="menu__item"><a class="menu__link">Каталог товаров</a></li>
           <li class="menu__item"><a class="menu__link" href="form.html">Вязание на заказ</a></li>
-          <li class="menu__item">
-            <label><input class="menu__item-search" type="search" placeholder="Поиск по сайту" aria-label="Поиск по сайту"></label>
-          </li>
+          <li class="menu__item"><a class="menu__link" href="#">Поиск по сайту</a></li>
+          <!--<li class="menu__item">-->
+          <!--<label><input class="menu__item-search" type="search" placeholder="Поиск по сайту" aria-label="Поиск по сайту"></label>-->
+          <!--</li>-->
           <li class="menu__item"><a class="menu__link" href="#">Корзина: пока пуста</a></li>
         </ul>
       </nav>
