--- a/source/index.html
+++ b/source/index.html
@@ -24,7 +24,7 @@
         <ul class="menu__list">
           <li class="menu__item"><a class="menu__link" href="catalog.html">Каталог товаров</a></li>
           <li class="menu__item"><a class="menu__link" href="form.html">Вязание на заказ</a></li>
-          <li class="menu__item"><a class="menu__link" href="form.html">Поиск по сайту</a></li>
+          <li class="menu__item"><a class="menu__link" href="#">Поиск по сайту</a></li>
 <!--          <li class="menu__item">-->
 <!--            <label><input class="menu__item-search" type="search" placeholder="Поиск по сайту" aria-label="Поиск по сайту"></label>-->
 <!--          </li>-->
