created footer line

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -54,7 +54,7 @@
                 <div class="catalog__desc">
                   <p class="catalog__title">Зайчик-попрыгайчик</p>
                 <p class="catalog__text">Рост 30 см, вес 200 г</p>
-                <hr class="catalog__line">
+                <hr class="catalog__line line">
                 <div class="catalog__price">
                   <p class="catalog__money">1200 руб.</p>
                   <img src="https://via.placeholder.com/150x150" width="20" height="19" alt="Иконка корзины">
@@ -68,7 +68,7 @@
                 <div class="catalog__desc">
                   <p class="catalog__title">Корзинка для белья</p>
                 <p class="catalog__text">Диаметр 15 см, высота 10 см</p>
-                <hr class="catalog__line">
+                <hr class="catalog__line line">
                 <div class="catalog__price">
                   <p class="catalog__money">690 руб.</p>
                   <img src="https://via.placeholder.com/150x150" width="20" height="19" alt="Иконка корзины">
@@ -82,7 +82,7 @@
                 <div class="catalog__desc">
                   <p class="catalog__title">Большая корзина<br> для игрушек</p>
                 <p class="catalog__text">Диаметр 30 см, высота 30 см</p>
-                <hr class="catalog__line">
+                <hr class="catalog__line line">
                 <div class="catalog__price">
                   <p class="catalog__money">1500 руб.</p>
                   <img src="https://via.placeholder.com/150x150" width="20" height="19" alt="Иконка корзины">
@@ -124,6 +124,7 @@
           </li>
         </ul>
       </div>
+      <hr class="footer__line line">
       <div class="footer__copyright copyright">
         <b class="copyright__text">Разработано</b>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
