--- a/source/index.html
+++ b/source/index.html
@@ -212,6 +212,7 @@
           </li>
         </ul>
       </div>
+      <hr class="footer__line line">
       <div class="footer__copyright copyright">
         <b class="copyright__text">Разработано</b>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
