--- a/source/catalog.html
+++ b/source/catalog.html
@@ -80,7 +80,7 @@
             <a class="catalog__link" href="#">
               <img class="catalog__image" src="https://via.placeholder.com/150x150" width="260" height="195" alt="Большая корзина для игрушек">
                 <div class="catalog__desc">
-                  <p class="catalog__title">Большая корзина<br> для игрушек</p>
+                  <p class="catalog__title catalog__title-width">Большая корзина для игрушек</p>
                 <p class="catalog__text">Диаметр 30 см, высота 30 см</p>
                 <hr class="catalog__line line">
                 <div class="catalog__price">
@@ -137,7 +137,7 @@
   <!-- Секция модального окна -->
   <section class="modal-add modal">
     <div class="modal__inner">
-      <p class="modal__title">Добавить<br> в корзину</p>
+      <p class="modal__title">Добавить в корзину</p>
       <fieldset class="modal__fieldset">
         <legend class="modal__legend">Выберите размер:</legend>
         <div class="modal__sizes">
