--- a/source/form.html
+++ b/source/form.html
@@ -56,7 +56,7 @@
             <div class="form__radio">
               <div class="form__interior">
                 <input class="form__input-padding" id="interior" type="radio" name="type" checked>
-                <label class="form__style-text" for="interior">Аксессуар <br> для интерьера</label>
+                <label class="form__style-text" for="interior">Аксессуар для интерьера</label>
               </div>
               <div class="form__games">
                 <input class="form__input-padding" id="games" type="radio" name="type">
