--- a/source/index.html
+++ b/source/index.html
@@ -225,7 +225,7 @@
   <!-- Секция модального окна -->
   <section class="modal-add modal">
     <div class="modal__inner">
-      <p class="modal__title">Добавить<br> в корзину</p>
+      <p class="modal__title">Добавить в корзину</p>
       <fieldset class="modal__fieldset">
         <legend class="modal__legend">Выберите размер:</legend>
         <div class="modal__sizes">
