fixed baskets table

--- a/source/index.html
+++ b/source/index.html
@@ -69,8 +69,8 @@
           <p class="baskets__week">Товар недели</p>
           <p class="baskets__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.</p>
         </div>
-        <table class="baskets__desc">
-          <tr class="baskets__table">
+        <table class="baskets__table">
+          <tr class="baskets__desc-table">
             <td class="baskets__value">
               <p>Цвет:</p>
             </td>
@@ -78,7 +78,7 @@
               <p>«Тиффани»/серый</p>
             </td>
           </tr>
-          <tr class="baskets__table">
+          <tr class="baskets__desc-table">
             <td class="baskets__value">
               <p>Диаметр:</p>
             </td>
@@ -86,7 +86,7 @@
               <p>25 см</p>
             </td>
           </tr>
-          <tr class="baskets__table">
+          <tr class="baskets__desc-table">
             <td class="baskets__value">
               <p>Высота:</p>
             </td>
