--- a/source/index.html
+++ b/source/index.html
@@ -159,20 +159,20 @@
     <section class="contacts">
       <div class="contacts__inner">
         <h2 class="contacts__title title">Контакты</h2>
-        <table class="contacts__desc">
-          <tr class="contacts__email">
-            <td class="contacts__value">e-mail:</td>
-            <td class="contacts__field">info@mimimishkashop.ru</td>
-          </tr>
-          <tr class="contacts__address">
-            <td class="contacts__value">адрес:</td>
-            <td class="contacts__field">
+        <div class="contacts__info">
+          <div class="contacts__email">
+            <p class="contacts__value">e-mail:</p>
+            <p class="contacts__field contacts__field-line">info@mimimishkashop.ru</p>
+          </div>
+          <div class="contacts__address">
+            <p class="contacts__value">адрес:</p>
+            <p class="contacts__field">
               г. Санкт-Петербург,<br>
               ул. Большая Конюшенная,<br>
               д. 19/8, офис 101
-            </td>
-          </tr>
-        </table>
+            </p>
+          </div>
+        </div>
       </div>
       <div class="contacts__map">
         <img class="contacts__image" src="img/map-mobile@1x.jpg" width="320" height="457" alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
