--- a/source/index.html
+++ b/source/index.html
@@ -72,26 +72,26 @@
         <table class="baskets__table">
           <tr class="baskets__desc-table">
             <td class="baskets__value">
-              <p>Цвет:</p>
+              <p class="baskets__text">Цвет:</p>
             </td>
             <td class="baskets__field">
-              <p>«Тиффани»/серый</p>
+              <p class="baskets__text">«Тиффани»/серый</p>
             </td>
           </tr>
           <tr class="baskets__desc-table">
             <td class="baskets__value">
-              <p>Диаметр:</p>
+              <p class="baskets__text">Диаметр:</p>
             </td>
             <td class="baskets__field">
-              <p>25 см</p>
+              <p class="baskets__text">25 см</p>
             </td>
           </tr>
           <tr class="baskets__desc-table">
             <td class="baskets__value">
-              <p>Высота:</p>
+              <p class="baskets__text">Высота:</p>
             </td>
             <td class="baskets__field">
-              <p>15 см</p>
+              <p class="baskets__text">15 см</p>
             </td>
           </tr>
         </table>
@@ -147,7 +147,7 @@
           <p class="reviews__name">Анастасия Красильникова</p>
           <address class="reviews__account">@misssssiskras</address>
         </div>
-        <div class="reviews__btn">
+        <div class="reviews__slide">
           <button class="reviews__btn-prev" type="button" aria-label="Предущий слайд">Предыдущий</button>
           <button class="reviews__btn-next" type="button" aria-label="Следующий слайд">Следующий</button>
         </div>
