--- a/source/catalog.html
+++ b/source/catalog.html
@@ -141,9 +141,9 @@
       <fieldset class="modal__fieldset">
         <legend class="modal__legend">Выберите размер:</legend>
         <div class="modal__sizes">
-          <input class="visually-hidden" id="size-s" type="radio" name="size">
-          <input class="visually-hidden" id="size-m" type="radio" name="size">
-          <input class="visually-hidden" id="size-l" type="radio" name="size" checked>
+          <input class="modal__radio visually-hidden" id="size-s" type="radio" name="size">
+          <input class="modal__radio visually-hidden" id="size-m" type="radio" name="size">
+          <input class="modal__radio visually-hidden" id="size-l" type="radio" name="size" checked>
           <label class="modal__size" for="size-s">S</label>
           <label class="modal__size" for="size-m">M</label>
           <label class="modal__size" for="size-l">L</label>
