--- a/source/form.html
+++ b/source/form.html
@@ -55,29 +55,29 @@
             <legend class="form__legend form__legend-type">Тип</legend>
             <div class="form__radio">
               <div class="form__interior">
-                <input class="form__input-padding" id="interior" type="radio" name="type" checked>
-                <label class="form__style-text" for="interior">Аксессуар для интерьера</label>
+                <input class="visually-hidden" id="interior" type="radio" name="type" checked>
+                <label class="form__style-text form__text-indentation" for="interior">Аксессуар для интерьера</label>
               </div>
               <div class="form__games">
-                <input class="form__input-padding" id="games" type="radio" name="type">
-                <label class="form__style-text" for="games">Детская игрушка</label>
+                <input class="visually-hidden" id="games" type="radio" name="type">
+                <label class="form__style-text form__text-indentation" for="games">Детская игрушка</label>
               </div>
             </div>
           </fieldset>
           <fieldset class="form__fieldset">
             <legend class="form__legend form__legend-color">Цвет</legend>
-            <label class="form__style-text"><input class="form__input-padding" type="checkbox" checked>Белый</label>
-            <label class="form__style-text"><input class="form__input-padding" type="checkbox" checked>Серый</label>
-            <label class="form__style-text"><input class="form__input-padding" type="checkbox">«Тиффани»</label>
-            <label class="form__style-text"><input class="form__input-padding" type="checkbox">Черный</label>
-            <label class="form__style-text"><input class="form__input-padding" type="checkbox">Розовый</label>
-            <label class="form__style-text"><input class="form__input-padding" type="checkbox">Оранжевый</label>
+            <label class="form__style-text form__text-indentation"><input class="visually-hidden" type="checkbox" checked>Белый</label>
+            <label class="form__style-text form__text-indentation"><input class="visually-hidden" type="checkbox" checked>Серый</label>
+            <label class="form__style-text form__text-indentation"><input class="visually-hidden" type="checkbox">«Тиффани»</label>
+            <label class="form__style-text form__text-indentation"><input class="visually-hidden" type="checkbox">Черный</label>
+            <label class="form__style-text form__text-indentation"><input class="visually-hidden" type="checkbox">Розовый</label>
+            <label class="form__style-text form__text-indentation"><input class="visually-hidden" type="checkbox">Оранжевый</label>
           </fieldset>
           <fieldset class="form__fieldset">
             <legend class="form__legend form__legend-name">Фио</legend>
-            <label class="form__style-text form__style-text-mb">Имя:<input class="form__placeholder" type="text" placeholder="Введите ваше имя*"></label>
-            <label class="form__style-text form__style-text-mb">Фамилия:<input class="form__placeholder" type="text" placeholder="Укажите фамилию*"></label>
-            <label class="form__style-text form__style-text-mb">Отчество:<input class="form__placeholder" type="text" placeholder="Отчество, если желаете"></label>
+            <label class="form__style-text form__text-mb">Имя:<input class="form__placeholder" type="text" placeholder="Введите ваше имя*"></label>
+            <label class="form__style-text form__text-mb">Фамилия:<input class="form__placeholder" type="text" placeholder="Укажите фамилию*"></label>
+            <label class="form__style-text form__text-mb">Отчество:<input class="form__placeholder" type="text" placeholder="Отчество, если желаете"></label>
           </fieldset>
           <fieldset class="form__fieldset">
             <legend class="form__legend form__legend-phone">Тел</legend>
