:heavy_check_mark: Сборка #11

--- a/11/form.html
+++ b/11/form.html
@@ -90,7 +90,7 @@
           </fieldset>
           <fieldset class="form__fieldset">
             <legend class="form__legend form__legend-additionally">Доп</legend>
-            <label><textarea class="form__textarea-text" name="form-text" id="form-text" cols="29" rows="10" placeholder="Опишите все ваши пожелания к заказу"></textarea></label>
+            <label><textarea class="form__textarea-text" name="form-text" id="form-text" placeholder="Опишите все ваши пожелания к заказу"></textarea></label>
           </fieldset>
           <small class="form__require"><sup>*</sup>Поля обязательны для заполнения</small>
           <button class="form__btn button" type="submit">Отправить заказ</button>
