fixed modal class

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -80,7 +80,7 @@
             <a class="catalog__link" href="#">
               <img class="catalog__image" src="https://via.placeholder.com/150x150" width="260" height="195" alt="Большая корзина для игрушек">
                 <div class="catalog__desc">
-                  <p class="catalog__title catalog__title-width">Большая корзина для игрушек</p>
+                  <p class="catalog__title catalog__title-basket">Большая корзина для игрушек</p>
                 <p class="catalog__text">Диаметр 30 см, высота 30 см</p>
                 <hr class="catalog__line line">
                 <div class="catalog__price">
@@ -141,9 +141,9 @@
       <fieldset class="modal__fieldset">
         <legend class="modal__legend">Выберите размер:</legend>
         <div class="modal__sizes">
-          <input class="modal__radio visually-hidden" id="size-s" type="radio" name="size">
-          <input class="modal__radio visually-hidden" id="size-m" type="radio" name="size">
-          <input class="modal__radio visually-hidden" id="size-l" type="radio" name="size" checked>
+          <input class="modal__input visually-hidden" id="size-s" type="radio" name="size">
+          <input class="modal__input visually-hidden" id="size-m" type="radio" name="size">
+          <input class="modal__input visually-hidden" id="size-l" type="radio" name="size" checked>
           <label class="modal__size" for="size-s">S</label>
           <label class="modal__size" for="size-m">M</label>
           <label class="modal__size" for="size-l">L</label>
