--- a/source/index.html
+++ b/source/index.html
@@ -221,9 +221,9 @@
       <fieldset class="modal__fieldset">
         <legend class="modal__legend">Выберите размер:</legend>
         <div class="modal__sizes">
-          <input class="modal__radio visually-hidden" id="size-s" type="radio" name="size">
-          <input class="modal__radio visually-hidden" id="size-m" type="radio" name="size">
-          <input class="modal__radio visually-hidden" id="size-l" type="radio" name="size" checked>
+          <input class="modal__input visually-hidden" value="s" id="size-s" type="radio" name="size">
+          <input class="modal__input visually-hidden" value="m" id="size-m" type="radio" name="size">
+          <input class="modal__input visually-hidden" value="l" id="size-l" type="radio" name="size" checked>
           <label class="modal__size" for="size-s">S</label>
           <label class="modal__size" for="size-m">M</label>
           <label class="modal__size" for="size-l">L</label>
