--- a/source/catalog.html
+++ b/source/catalog.html
@@ -15,7 +15,7 @@
 
   <!-- Шапка сайта -->
   <header class="header">
-    <div class="header__inner">
+    <div class="inner">
       <a class="header__logo logo" href="index.html">
         <img class="logo__image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет магазина Мишка">
       </a>
@@ -46,7 +46,7 @@
 
 <!-- Секция каталога -->
     <section class="catalog">
-      <div class="catalog__inner">
+      <div class="inner">
         <ul class="catalog__list">
           <li class="catalog__item">
             <a class="catalog__link" href="#">
@@ -107,7 +107,7 @@
 
   <!-- Подвал сайта -->
   <footer class="footer">
-    <div class="footer__inner">
+    <div class="inner">
       <div class="footer__social social">
         <ul class="social__list">
           <li class="social__item">
@@ -136,7 +136,7 @@
 
   <!-- Секция модального окна -->
   <section class="modal-add modal">
-    <div class="modal__inner">
+    <div class="inner">
       <p class="modal__title">Добавить в корзину</p>
       <fieldset class="modal__fieldset">
         <legend class="modal__legend">Выберите размер:</legend>
