--- a/11/catalog.html
+++ b/11/catalog.html
@@ -16,7 +16,7 @@
 
   <!-- Шапка сайта -->
   <header class="header">
-    <div class="header__inner">
+    <div class="inner">
       <a class="header__logo logo" href="index.html">
         <img class="logo__image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет магазина Мишка">
       </a>
@@ -47,7 +47,7 @@
 
 <!-- Секция каталога -->
     <section class="catalog">
-      <div class="catalog__inner">
+      <div class="inner">
         <ul class="catalog__list">
           <li class="catalog__item">
             <a class="catalog__link" href="#">
@@ -81,7 +81,7 @@
             <a class="catalog__link" href="#">
               <img class="catalog__image" src="https://via.placeholder.com/150x150" width="260" height="195" alt="Большая корзина для игрушек">
                 <div class="catalog__desc">
-                  <p class="catalog__title catalog__title-width">Большая корзина для игрушек</p>
+                  <p class="catalog__title catalog__title-basket">Большая корзина для игрушек</p>
                 <p class="catalog__text">Диаметр 30 см, высота 30 см</p>
                 <hr class="catalog__line line">
                 <div class="catalog__price">
@@ -108,7 +108,7 @@
 
   <!-- Подвал сайта -->
   <footer class="footer">
-    <div class="footer__inner">
+    <div class="inner">
       <div class="footer__social social">
         <ul class="social__list">
           <li class="social__item">
@@ -137,14 +137,14 @@
 
   <!-- Секция модального окна -->
   <section class="modal-add modal">
-    <div class="modal__inner">
+    <div class="inner">
       <p class="modal__title">Добавить в корзину</p>
       <fieldset class="modal__fieldset">
         <legend class="modal__legend">Выберите размер:</legend>
         <div class="modal__sizes">
-          <input class="modal__radio visually-hidden" id="size-s" type="radio" name="size">
-          <input class="modal__radio visually-hidden" id="size-m" type="radio" name="size">
-          <input class="modal__radio visually-hidden" id="size-l" type="radio" name="size" checked>
+          <input class="modal__input visually-hidden" value="size-s" id="size-s" type="radio" name="size">
+          <input class="modal__input visually-hidden" value="size-m" id="size-m" type="radio" name="size">
+          <input class="modal__input visually-hidden" value="size-l" id="size-l" type="radio" name="size" checked>
           <label class="modal__size" for="size-s">S</label>
           <label class="modal__size" for="size-m">M</label>
           <label class="modal__size" for="size-l">L</label>
