fixed radio in modal..

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -141,11 +141,11 @@
       <fieldset class="modal__fieldset">
         <legend class="modal__legend">Выберите размер:</legend>
         <div class="modal__sizes">
-          <input class="modal__input visually-hidden" value="size-s" id="size-s" type="radio" name="size">
+          <input class="modal__input visually-hidden" value="size-s" id="size-s" type="radio" name="size" checked>
           <label class="modal__size" for="size-s">S</label>
           <input class="modal__input visually-hidden" value="size-m" id="size-m" type="radio" name="size">
           <label class="modal__size" for="size-m">M</label>
-          <input class="modal__input visually-hidden" value="size-l" id="size-l" type="radio" name="size" checked>
+          <input class="modal__input visually-hidden" value="size-l" id="size-l" type="radio" name="size">
           <label class="modal__size" for="size-l">L</label>
         </div>
       </fieldset>
