--- a/source/index.html
+++ b/source/index.html
@@ -15,7 +15,7 @@
 
   <!-- Шапка сайта -->
   <header class="header">
-    <div class="inner">
+    <div class="header__inner">
       <a class="header__logo logo">
         <img class="logo__image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет магазина Мишка">
       </a>
@@ -47,13 +47,13 @@
       </div>
       <div class="handwork__goods">
         <a href="catalog.html" class="handwork__interior">
-          <div class="inner">
+          <div class="handwork__inner">
             <p class="handwork__text">Предметы интерьера</p>
             <img class="handwork__image-itn" src="https://via.placeholder.com/150x150" width="40" height="62" alt="Предметы интерьера">
           </div>
         </a>
         <a href="catalog.html" class="handwork__toys">
-          <div class="inner">
+          <div class="handwork__inner">
             <p class="handwork__text">Детские игрушки</p>
             <img class="handwork__image-toys" src="https://via.placeholder.com/150x150" width="60" height="60" alt="Детские игрушки">
           </div>
@@ -63,7 +63,7 @@
 
 <!-- Секция вязаных корзинок -->
     <section class="baskets">
-      <div class="inner">
+      <div class="baskets__inner">
         <div class="baskets__good">
           <h2 class="baskets__title title">Вязаные корзинки</h2>
           <p class="baskets__week">Товар недели</p>
@@ -105,7 +105,7 @@
 
 <!-- Секция о нас -->
     <section class="about-us">
-      <div class="inner">
+      <div class="about-us__inner">
         <h2 class="about-us__title title">Коротко о нас:</h2>
         <ul class="about-us__list">
           <li class="about-us__item">
@@ -138,7 +138,7 @@
 
 <!-- Секция отзывов -->
     <section class="reviews">
-      <div class="inner">
+      <div class="reviews__inner">
         <h2 class="reviews__title title">Отзывы</h2>
         <div class="reviews__slider">
           <p class="reviews__text">
@@ -157,7 +157,7 @@
 
 <!-- Секция контактов -->
     <section class="contacts">
-      <div class="inner">
+      <div class="contacts__inner">
         <h2 class="contacts__title title">Контакты</h2>
         <div class="contacts__info">
           <div class="contacts__email">
@@ -178,7 +178,7 @@
         <img class="contacts__image" src="img/map-mobile@1x.jpg" width="320" height="457" alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
         <img class="contacts__pin" src="https://via.placeholder.com/150x150" alt="" width="100" height="67">
       </div>
-      <div class="inner">
+      <div class="contacts__inner">
         <button class="contacts__btn button">Напишите нам</button>
       </div>
     </section>
@@ -187,7 +187,7 @@
 
   <!-- Подвал сайта -->
   <footer class="footer">
-    <div class="inner">
+    <div class="footer__inner">
       <div class="footer__social social">
         <ul class="social__list">
           <li class="social__item">
@@ -216,7 +216,7 @@
 
   <!-- Секция модального окна -->
   <section class="modal-add modal">
-    <div class="inner">
+    <div class="modal__inner">
       <p class="modal__title">Добавить в корзину</p>
       <fieldset class="modal__fieldset">
         <legend class="modal__legend">Выберите размер:</legend>
