:heavy_check_mark: Сборка #11

--- a/11/catalog.html
+++ b/11/catalog.html
@@ -16,7 +16,7 @@
 
   <!-- Шапка сайта -->
   <header class="header">
-    <div class="inner">
+    <div class="header__inner">
       <a class="header__logo logo" href="index.html">
         <img class="logo__image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет магазина Мишка">
       </a>
@@ -47,7 +47,7 @@
 
 <!-- Секция каталога -->
     <section class="catalog">
-      <div class="inner">
+      <div class="catalog__inner">
         <ul class="catalog__list">
           <li class="catalog__item">
             <a class="catalog__link" href="#">
@@ -108,7 +108,7 @@
 
   <!-- Подвал сайта -->
   <footer class="footer">
-    <div class="inner">
+    <div class="footer__inner">
       <div class="footer__social social">
         <ul class="social__list">
           <li class="social__item">
@@ -137,7 +137,7 @@
 
   <!-- Секция модального окна -->
   <section class="modal-add modal">
-    <div class="inner">
+    <div class="modal__inner">
       <p class="modal__title">Добавить в корзину</p>
       <fieldset class="modal__fieldset">
         <legend class="modal__legend">Выберите размер:</legend>
