--- a/11/form.html
+++ b/11/form.html
@@ -16,7 +16,7 @@
 
   <!-- Шапка сайта -->
   <header class="header">
-    <div class="inner">
+    <div class="header__inner">
       <a class="header__logo logo" href="index.html">
         <img class="logo__image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет магазина Мишка">
       </a>
@@ -47,7 +47,7 @@
 
 <!-- Секция формы заказа -->
     <section class="form">
-      <div class="inner">
+      <div class="form__inner">
         <p class="form__text">
           Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.
         </p>
@@ -115,7 +115,7 @@
 
   <!-- Подвал сайта -->
   <footer class="footer">
-    <div class="inner">
+    <div class="footer__inner">
       <div class="footer__social social">
         <ul class="social__list">
           <li class="social__item">
