--- a/source/index.html
+++ b/source/index.html
@@ -19,16 +19,14 @@
       <a class="header__logo logo">
         <img class="logo__image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет магазина Мишка">
       </a>
+      <button class="menu__btn" type="button" aria-label="Открыть меню для навигации на сайте">Меню</button>
       <nav class="header__menu menu">
-        <button class="menu__btn" type="button" aria-label="Открыть меню для навигации на сайте">Меню</button>
         <ul class="menu__list">
           <li class="menu__item"><a class="menu__link" href="catalog.html">Каталог товаров</a></li>
           <li class="menu__item"><a class="menu__link" href="form.html">Вязание на заказ</a></li>
           <li class="menu__item"><a class="menu__link menu__link-search" href="#">Поиск по сайту</a></li>
-<!--          <li class="menu__item">-->
-<!--            <label><input class="menu__item-search" type="search" placeholder="Поиск по сайту" aria-label="Поиск по сайту"></label>-->
-<!--          </li>-->
           <li class="menu__item"><a class="menu__link menu__link-basket" href="#">Корзина: пока пуста</a></li>
+          <li class="menu__item"><a class="menu__link menu__link-delivery" href="#">Бесплатная доставка по Росии</a></li>
         </ul>
       </nav>
     </div>
@@ -43,7 +41,7 @@
 <!-- Секция ручной работы -->
     <section class="handwork">
       <div class="handwork__title">
-        <p class="handwork__text page-title">Милые штуки ручной <br> работы для дома</p>
+        <p class="handwork__text page-title">Милые штуки ручной работы для дома</p>
       </div>
       <div class="handwork__goods">
         <a href="catalog.html" class="handwork__interior">
