created desktop media in handwork

--- a/source/index.html
+++ b/source/index.html
@@ -26,7 +26,7 @@
           <li class="menu__item"><a class="menu__link" href="form.html">Вязание на заказ</a></li>
           <li class="menu__item"><a class="menu__link menu__link-search" href="#">Поиск по сайту</a></li>
           <li class="menu__item"><a class="menu__link menu__link-basket" href="#">Корзина: пока пуста</a></li>
-          <li class="menu__item"><a class="menu__link menu__link-delivery" href="#">Бесплатная доставка по Росии</a></li>
+          <li class="menu__item menu__item-delivery"><a class="menu__link menu__link-delivery" href="#">Бесплатная доставка по Росии</a></li>
         </ul>
       </nav>
     </div>
