--- a/source/index.html
+++ b/source/index.html
@@ -46,13 +46,13 @@
       <div class="handwork__goods">
         <a href="catalog.html" class="handwork__interior">
           <div class="handwork__inner">
-            <p class="handwork__text">Предметы интерьера</p>
+            <p class="handwork__text-category">Предметы интерьера</p>
             <img class="handwork__image-itn" src="https://via.placeholder.com/150x150" width="40" height="62" alt="Предметы интерьера">
           </div>
         </a>
         <a href="catalog.html" class="handwork__toys">
           <div class="handwork__inner">
-            <p class="handwork__text">Детские игрушки</p>
+            <p class="handwork__text-category">Детские игрушки</p>
             <img class="handwork__image-toys" src="https://via.placeholder.com/150x150" width="60" height="60" alt="Детские игрушки">
           </div>
         </a>
@@ -62,42 +62,47 @@
 <!-- Секция вязаных корзинок -->
     <section class="baskets">
       <div class="baskets__inner">
-        <div class="baskets__good">
+        <div class="baskets__block-one">
           <h2 class="baskets__title title">Вязаные корзинки</h2>
           <p class="baskets__week">Товар недели</p>
-          <p class="baskets__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.</p>
         </div>
-        <table class="baskets__table">
-          <tr class="baskets__desc-table">
-            <td class="baskets__value">
-              <p class="baskets__text">Цвет:</p>
-            </td>
-            <td class="baskets__field">
-              <p class="baskets__text">«Тиффани»/серый</p>
-            </td>
-          </tr>
-          <tr class="baskets__desc-table">
-            <td class="baskets__value">
-              <p class="baskets__text">Диаметр:</p>
-            </td>
-            <td class="baskets__field">
-              <p class="baskets__text">25 см</p>
-            </td>
-          </tr>
-          <tr class="baskets__desc-table">
-            <td class="baskets__value">
-              <p class="baskets__text">Высота:</p>
-            </td>
-            <td class="baskets__field">
-              <p class="baskets__text">15 см</p>
-            </td>
-          </tr>
-        </table>
-        <div class="baskets__to-order">
-          <img class="baskets__image" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Вязаные корзинки">
-          <p class="baskets__prise">Цена: 990 руб.</p>
-          <button class="baskets__to-order-btn button" type="button">Заказать</button>
+        <div class="baskets__info">
+          <div class="baskets__block-two">
+            <p class="baskets__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.</p>
+            <table class="baskets__table">
+              <tr class="baskets__desc-table">
+                <td class="baskets__value">
+                  <p class="baskets__text">Цвет:</p>
+                </td>
+                <td class="baskets__field">
+                  <p class="baskets__text">«Тиффани»/серый</p>
+                </td>
+              </tr>
+              <tr class="baskets__desc-table">
+                <td class="baskets__value">
+                  <p class="baskets__text">Диаметр:</p>
+                </td>
+                <td class="baskets__field">
+                  <p class="baskets__text">25 см</p>
+                </td>
+              </tr>
+              <tr class="baskets__desc-table">
+                <td class="baskets__value">
+                  <p class="baskets__text">Высота:</p>
+                </td>
+                <td class="baskets__field">
+                  <p class="baskets__text">15 см</p>
+                </td>
+              </tr>
+            </table>
+            <img class="baskets__image-mobile" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Вязаные корзинки">
+            <p class="baskets__prise">Цена: 990 руб.</p>
+            <button class="baskets__to-order-btn button" type="button">Заказать</button>
+          </div>
+          <img class="baskets__image-tablet" src="img/triple-set-tablet@1x.jpg" width="333" height="404" alt="Вязаные корзинки">
+          <img class="baskets__image-desktop" src="img/triple-set-desktop@1x.jpg" width="525" height="636" alt="Вязаные корзинки">
         </div>
+
       </div>
     </section>
 
